# code-analysis-toolkit

./: .gitignore  LICENSE  README.md  generateCodeAnalyzerConfig.sh  installRequisites.sh  staticCodeAnalysis.sh
codeAnalysisExample/: codeAnalyzerConfig.json
codeAnalysisExample/codeAnalysisResult/: clang_tidy.json  clang_tidy_summary.txt  coverage.info  cppcheck.xml
codeAnalysisExample/codeAnalysisResult/coverage-html/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
codeAnalysisExample/codeAnalysisResult/coverage-html/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  math_utils.c.func-c.html  math_utils.c.func.html  math_utils.c.gcov.html  string_utils.c.func-c.html  string_utils.c.func.html  string_utils.c.gcov.html
codeAnalysisExample/codeAnalysisResult/html/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  clang_tidy.html  index.html  stats.html
codeAnalysysAddons/: clang_tidy_to_html.py  generate_summary_pdf.py  misra_rules.txt
docs/: codeAnalyzerConfig.md  projectStructureRequirements.md
projectExample/: CMakeLists.txt  README.md
projectExample/include/: math_utils.h  platform.h  string_utils.h
projectExample/src/: main.c  math_utils.c  platform.c  string_utils.c
projectExample/tests/: test_math.c  test_string.c
